// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBadgeGroup gutterSize none is rendered 1`] = `
<div
  class="euiBadgeGroup emotion-euiBadgeGroup-none"
/>
`;

exports[`EuiBadgeGroup gutterSize s is rendered 1`] = `
<div
  class="euiBadgeGroup emotion-euiBadgeGroup-s"
/>
`;

exports[`EuiBadgeGroup gutterSize xs is rendered 1`] = `
<div
  class="euiBadgeGroup emotion-euiBadgeGroup-xs"
/>
`;

exports[`EuiBadgeGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiBadgeGroup testClass1 testClass2 emotion-euiBadgeGroup-xs-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiBadge emotion-euiBadge-default"
    title="Content"
  >
    <span
      class="euiBadge__content emotion-euiBadge__content"
    >
      <span
        class="euiBadge__text emotion-euiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;
